--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <link rel="stylesheet" type="text/css" href="index.css">
     <meta charset="UTF-8">
     <title>Calculator by RichAWarren</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body>
+  <body id="main">
     <section class="page-header">
       <h1 class="project-name">Calculator</h1>
       <h2 class="project-tagline">A basic two number calculator</h2>
@@ -14,7 +15,8 @@
     <section class="main-content">
 		<div>
 		<p id="demo">Select two numbers and the operator,<br> Then click calculate to find the answer</p>
-		<form>
+    <div id="buttons">
+    <form>
 			<input type="number" placeholder='0' id="num1">
 			<input type="number" placeholder='0' id="num2">
       <select type="text" id="operator" onChange="readBox()">
@@ -25,6 +27,7 @@
       </select><br>
 			<button type="button" id='calculate' onClick="readBox()">CALCULATE</button>
 		</form>
+   </div>
 		</div>
     </section>
 	<script src = "index.js"></script>
