--- a/index.html
+++ b/index.html
@@ -25,11 +25,18 @@
         <option value="multiply">Multiply</option>
         <option value="divide">Divide</option>
       </select><br>
+      <br>
 			<button type="button" id='calculate' onClick="readBox()">CALCULATE</button>
 		</form>
+    <br>
+    <br>
+    <input type="button" onclick="day();" value="Day" />
+    <input type="button" onclick="night();" value="Night" />
+    <input type="button" onclick="acidButton();" value="Acid" />
    </div>
 		</div>
     </section>
-	<script src = "index.js"></script>
+
+  <script src = "index.js"></script>
   </body>
 </html>
